# gw-basic-ls

./: ..gitignore.swp  .gitignore  .gitignore.save  .gitignore.save.1  .package.swp  CMakeLists.txt  README.md  gw-basic-ls-1.0.0.vsix  log.txt  log2.txt  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json
client/src/: extension.ts
data/: config.json  keywords.json  sample_queries.txt
json_files/: initialize_query.json
sandbox/: log.txt  log2.txt  main.GWBAS
scripts/: docloader.js  extrakeywords.js  test.js
server/src/: cstring.c  cstring.h  debug.c  debug.h  diagnostic_messages.c  diagnostic_messages.h  json_helper.c  json_helper.h  language_server.c  language_server.h  logger.c  logger.h  main.c  map.c  map.h  message.c  message.h  parser.c  parser.h  tokenizer.c  tokenizer.h  types.c  types.h  vector.c  vector.h
